--- a/goals/goal-models-data.qmd
+++ b/goals/goal-models-data.qmd
@@ -146,12 +146,14 @@ where, $C_{k} = C_{c}/C_{r}$ and $N$ is the number of habitats in a region. $C_{
 |------------------|-------------------|------------------|------------------|
 | Seagrass     | Increasing or stable trend assigned condition = 1.0; decreasing trend assigned condition = 0.71 based on global loss                                                     | Seagrass extent per oceanic region (vector based)   | Calculated across data from 1990 - 2000                                                                                                                    |
 | Kelp         | Increasing or stable trend assigned condition = 1.0; decreasing trend assigned condition based on a 2% global yearly loss                                                | Kelp extent per oceanic region (vector based)       | Calculated across data from 1983 - 2012                                                                                                                    |
-| Coral reefs  | Current % cover divided by reference % cover                                                                                                                             | Coral reef extent per oceanic region (Vector based) | Calculated across data from 1975-2006                                                                                                                      |
+| Coral reefs  | Current % cover divided by reference % cover                                                                                                                             | Coral reef extent per oceanic region (Vector based) | Calculated across data from 1975-2025 via two key sources                                                                                                                     |
 | Mangroves    | Current hectares divided by reference hectares, for coastal mangroves only                                                                                               | Mangrove extent per oceanic region (vector based)   | Calculated using 5 most recent years of data                                                                                                               |
 | Salt marsh   | All regions assigned condition = 0.75 based on conservative historical extent losses                                                                                     | Salt marsh extent per oceanic region                | All regions assigned trend based on historical .28% global yearly loss                                                                                     |
 | Sea ice edge | Current (3-year rolling-average using the current year and previous 2 years) % cover of sea ice having 10-50% cover, divided by reference % cover average from 1979-2000 | Same as condition                                   | Calculated from the fitted slope of %-deviation-from-reference per year, of the most recent 5 years of data (each year of data is based on 3-year average) |
 | Soft bottom  | Soft-bottom destructive fishing practices relative to area of soft-bottom habitat and rescaled to 0-1 based on relative global values                                    | Clawson et al. [-@clawson_global_2025]                | Calculated using 5 most recent years of condition data                                                                                                     |
 | Tidal flat   | Average tidal flat extent of 2010 and 2013 relative to historic extent (average of 1989 and 1992)                                                                        | Tidal flat extent per oceanic region (vector based) | Calculated across data from 2001-2013                                                                                                                      |
+| Beaches   | Conditon was determined from a 2018 report on the rate of erosion on sandy beaches on 24% of global coastline, which was applied to all beach area, subtracted from total extent and converted to a proportion 
+| Sandy beach extent (km2) was determined from remote sensing based extent dataset over a 10 year survey period (2010-2020) grouped by 5 year period | Sandy beach trend was calculated from changes in coastal area (km2) from 2010 to 2020, multiplied by year's since assessment, and applied to each country's area.Trend was rescaled to 0-1.                                                                                                                     |
 
 A significant amount of pre-processing of the habitat data was needed to fill data gaps and resolve data quality issues (Section 7). Because consistent habitat monitoring data was unavailable for many countries, anomalous values can occur. This is particularly true for highly variable habitats like seagrasses or coral reefs which can have significant site-to-site and year-to-year differences in extent and condition [@bruno_regional_2016]. Biases may also have been introduced from spatial (e.g., protected or impacted sites) and temporal (e.g., directly after a disturbance event) selections in sampling. In regions where we had a limited number of surveys in a particular country, overall status can be under- or overestimated because of these fluctuations.
 
@@ -370,7 +372,7 @@ We include four measures of pollution in the clean waters goal: eutrophication (
 | Eutrophication (nutrient) | FAO fertilizer and manure data [@unitednations2022faostata; @unitednations2021faostat; @halpern2022cumulative; @tuholske2021]                                                                                                                                                   | Standard method (section 5.3.1)                                                     |
 | Chemical                  | Land-based organic pollution (FAO pesticide data), Land-based inorganic pollution (based on run-off from impermeable surfaces), ocean-based pollution based on commercial shipping and port traffic [@unitednations2022faostata; @unitednations2021faostat; @halpern2008global] | Trend based only on changes in organic pollution, other variables remained the same |
 | Pathogens                 | Proportion of population without access to improved sanitation facilities [@who-unicef2024]                                                                                                                                                                                     | Standard method                                                                     |
-| Marine debris             | Plastic pollution [@eriksen2014plastic]                                                                                                                                                                                                                                         | Data on improperly disposed of plastics [@jambeck2015plastic]                       |
+| Marine debris             | Micro plastic pollution [@ncei_ncei_2025]                                                                                                                                                                                                                                         | Data on improperly disposed of plastics [@jambeck2015plastic]                       |
 
 We used the modeled input of land-based nitrogen input from livestock manure and crop fertilizer application as a proxy for nutrient input following similar methods to @halpern2022cumulative and @tuholske2021. The modeled proxy approach does not allow the distinction between toxic and non-toxic bloom events that can arise from excess nutrient input (often both referred to in the literature as harmful algal blooms, or HABs) or at what nutrient concentration an ecosystem is pushed into a HAB condition (i.e., the threshold value). Local studies may be able to obtain information on such non-linear responses and include it as part of this status measure.
 
