--- a/OHI-score-anatomy.qmd
+++ b/OHI-score-anatomy.qmd
@@ -55,12 +55,12 @@ Goal (and subgoal scores) are calculated using several variables (referred to as
 
 | Dimension               | Subdimension | Description                                                                                                                                                                                                                                                             | More information                              | Calculating                                                                                                                                                                                   |
 |-------------------------|--------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Current status          | \-           | Current state of the goal relative to the desired "reference point". Values range from 0-100.                                                                                                                                                                           | *Section 6. Goal models and data*             | Calculated using functions in ohi-global repo: https://github.com/OHI-Science/ohi-global/blob/draft/eez/conf/functions.R and the *scenario_data_years.csv* file (in same folder)              |
-| Predicted future status | Resilience   | Variables such as good governance and ecological factors that provide resilience to pressures, and thus, are likely to improve future status. Values range from 0-100                                                                                                   | *Section 5.3 Likely future status dimensions* | Calculated using functions in ohicore package.And, files: *resilience_categories.csv* and *resilience_matrix.csv* located here: https://github.com/OHI-Science/ohi-global/tree/draft/eez/conf |
-| Predicted future status | Pressure     | Pressures stress the system and threaten future delivery of benefits, and thus, are likely to reduce future status. Values range from 0-100                                                                                                                             | *Section 5.3 Likely future status dimensions* | Calculated using function in ohicore package. And, files: *pressure_categories.csv* and *pressures_matrix.csv*, located here: https://github.com/OHI-Science/ohi-global/tree/draft/eez/conf   |
-| Predicted future status | Trend        | Average yearly change in status (typically estimated using most recent 5 years of data) multiplied by 5 to esimate five years into the future. Units are proportional change (absolute change/year is divided by the value of the earliest year) and range from -1 to 1 | *Section 5.3 Likely future status dimensions* | Calculated using functions from ohi-global repo: https://github.com/OHI-Science/ohi-global/blob/draft/eez/conf/functions.R and the scenario_data_years.csv file (in same folder)              |
+| Current status          | \-           | Current state of the goal relative to the desired "reference point". Values range from 0-100.                                                                                                                                                                           | *Section 6. Goal models and data*             | Calculated using functions in [ohi-global repo](https://github.com/OHI-Science/ohi-global/blob/draft/eez/conf/functions.R) and the [*scenario_data_years.csv*](https://github.com/OHI-Science/ohi-global/blob/draft/eez/conf/scenario_data_years.csv) file              |
+| Predicted future status | Resilience   | Variables such as good governance and ecological factors that provide resilience to pressures, and thus, are likely to improve future status. Values range from 0-100                                                                                                   | *Section 5.3 Likely future status dimensions* | Calculated using functions in ohicore package. Files: [*resilience_categories.csv*](https://github.com/OHI-Science/ohi-global/blob/draft/eez/conf/resilience_categories.csv) and [*resilience_matrix.csv*](https://github.com/OHI-Science/ohi-global/blob/draft/eez/conf/resilience_matrix.csv) |
+| Predicted future status | Pressure     | Pressures stress the system and threaten future delivery of benefits, and thus, are likely to reduce future status. Values range from 0-100                                                                                                                             | *Section 5.3 Likely future status dimensions* | Calculated using function in ohicore package. Files: [*pressure_categories.csv*](https://github.com/OHI-Science/ohi-global/blob/draft/eez/conf/pressure_categories.csv) and [*pressures_matrix.csv*](https://github.com/OHI-Science/ohi-global/blob/draft/eez/conf/pressures_matrix.csv) |
+| Predicted future status | Trend        | Average yearly change in status (typically estimated using most recent 5 years of data) multiplied by 5 to esimate five years into the future. Units are proportional change (absolute change/year is divided by the value of the earliest year) and range from -1 to 1 | *Section 5.3 Likely future status dimensions* | Calculated using functions from [ohi-global repo](https://github.com/OHI-Science/ohi-global/blob/draft/eez/conf/functions.R) and the [*scenario_data_years.csv*](https://github.com/OHI-Science/ohi-global/blob/draft/eez/conf/scenario_data_years.csv) file               |
 
-![**Figure 2.1. Relationship between OHI dimensions and scores**. This figure describes how the dimensions come together to calculate a goal score, and represents equations 4.3 and 4.5.](media/figs/OHI%20dimensions.png){fig-align="center"}
+![**Figure 2.1. Relationship between OHI dimensions and scores**. This figure describes how the dimensions come together to calculate a goal score, and represents equations 4.3 and 4.5.](media/figs/OHI dimensions.png){fig-align="center"}
 
 Finally, an overall Index score for each region is calculated by averaging the goal scores (Figure 2.2).
 
